# blastguard

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  sanity.yml
action/: action.yml  install.sh
scripts/: check-license-headers.sh
src/bpf/: blastguard.bpf.c  events.h
src/common/: io.cpp  io.h  net.h  proto.cpp  proto.h  tokens.h  uniquefd.h
src/ctl/: args.cpp  args.h  main.cpp
src/daemon/: args.cpp  args.h  attributor.cpp  attributor.h  daemon.cpp  daemon.h  ebpfmanager.cpp  ebpfmanager.h  ipcserver.cpp  ipcserver.h  main.cpp  report.cpp  report.h  rules.cpp  rules.h  session.cpp  session.h
test/fixtures/benign-noisy/: install.sh
test/fixtures/evil-helper/: install.sh
test/integration/: run-benign.sh  run-enforce.sh  run-evil.sh
